--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pandas==2.3.3
 pillow==11.3.0
 plotly==6.3.1
 pluggy==1.6.0
+psycopg2-binary==2.9.11
 Pygments==2.19.2
 pyparsing==3.2.5
 pytest==8.4.2
